crates/braid-text/error.txt
    Checking braid-text v0.1.0 (C:\Users\isich\braid_tauri\crates\braid-text)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `regex`
  --> crates\braid-text\src\lib.rs:77:27
   |
77 |         let range_regex = regex::Regex::new(r"\[(\d+):(\d+)\]").unwrap();
   |                           ^^^^^ use of unresolved module or unlinked crate `regex`
   |
   = help: if you wanted to use a crate named `regex`, use `cargo add regex` to add it to your `Cargo.toml`

warning: unused import: `json`
 --> crates\braid-text\src\lib.rs:3:18
  |
3 | use serde_json::{json, Value};
  |                  ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::collections::HashMap`
 --> crates\braid-text\src\lib.rs:4:5
  |
4 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> crates\braid-text\src\lib.rs:41:13
   |
41 |         let mut len_remaining = std::cmp::min(a.len() - p, b.len() - p);
   |             ----^^^^^^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0433`.
warning: `braid-text` (lib) generated 3 warnings
error: could not compile `braid-text` (lib) due to 1 previous error; 3 warnings emitted
